--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,17 @@
 spring.application.name=productinventorysystem
 
-server.port=1022
-spring.datasource.url = jdbc:mysql://localhost:3306/productInventoryapi?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
+server.port= 8080
+ 
+ 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:test}
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:root}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+ 
+logging.level.root=ERROR
 
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto = update
+ 
